# MorseCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: settings.txt
data/: decoded_output_2.txt  morse_output_1.txt  morse_output_3.txt  morse_output_4.txt  morse_output_5.txt  morse_output_6.txt  output.txt
include/: app.h  app_config.h  constants.h  error.h  error_codes.h  error_messages.h  file_utils.h  language.h  morse.h  separator.h  settings.h  stats.h  ui.h  validation.h
src/: app.c  error.c  file_utils.c  language.c  main.c  morse.c  separator.c  settings.c  stats.c  ui.c  validation.c
